user manager module

--- a/assets/themes/flatlab/css/style.css
+++ b/assets/themes/flatlab/css/style.css
@@ -4907,3 +4907,6 @@ tr.odd.gradeX td.sorting_1, tr.even.gradeX td.sorting_1, table.display tr.even.g
     font-weight: normal;
     cursor: pointer;
 }
+.panel-heading .pull-right {
+    margin-top: -5px;
+}
