--- a/assets/themes/flatlab/css/style.css
+++ b/assets/themes/flatlab/css/style.css
@@ -4913,3 +4913,6 @@ tr.odd.gradeX td.sorting_1, tr.even.gradeX td.sorting_1, table.display tr.even.g
 .cursor-default {
     cursor: default;
 }
+#configForm .form-group {
+    border-bottom: 0;
+}
