--- a/assets/themes/admin/src/scss/custom.scss
+++ b/assets/themes/admin/src/scss/custom.scss
@@ -1,4 +1,6 @@
-.w5{width: 5% }
+@for $i from 1 through 100 {
+  .w#{$i} { width: 1% * $i; }
+}
 .left_col {
   background: #fff;
   top: 66px;
@@ -2162,7 +2164,8 @@ span.section {
   border-radius: 0;
 }
 .form-horizontal .control-label {
-  padding-top: 8px
+  padding-top: 8px;
+  text-align: left;
 }
 .form-control:focus {
   border-color: #CCD0D7;
@@ -5067,7 +5070,7 @@ div.tagsinput input {
 }
 
 .sortable > li {
-    padding: 15px 0 15px 35px !important ;
+    padding: 12px 10px 12px 16px !important;
     position: relative;
     background: #f5f6f8;
     margin-bottom: 2px;
